# rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  cliff.toml  deny.toml  output.yaml  test.hurl
fixtures/: blake3.txt  blake3_sign.txt  ed25519.pk  ed25519.sk  lang_trending.csv
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_command.rs  csv_opts.rs  gen_pass_opts.rs  http_command.rs  jwt_command.rs  mod.rs  text_command.rs
src/process/: mod.rs  process_base64.rs  process_csv.rs  process_gen_pass.rs  process_http.rs  process_text.rs
