[package]
name = "rcli"
version = "0.1.0"
authors = ["normal <yjhtrying@gamil.com>"]
edition = "2024"
license = "MIT"
description = """
A cli project for practice rust
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
