[package]
name = "rcli"
version = "0.1.0"
authors = ["normal <yjhtrying@gamil.com>"]
edition = "2024"
license = "MIT"
description = """
A cli project for practice rust
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
zxcvbn = "3.1.0"
