[package]
name = "rcli"
version = "0.1.0"
authors = ["normal <yjhtrying@gamil.com>"]
edition = "2024"
license = "MIT"
description = """
A cli project for practice rust
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["http2"] }
base64 = "0.22.1"
blake3 = "1.8.2"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["fs", "net", "rt", "rt-multi-thread", "tracing"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["compression-full", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zxcvbn = "3.1.0"
